Fix private JVM arguments on Windows and refresh Maven secrets for reruns